--- a/views/public/html/Evaluation-OfficersDeckForm.html
+++ b/views/public/html/Evaluation-OfficersDeckForm.html
@@ -805,29 +805,27 @@ SIRE/CID experience
         // Function to populate form fields with values from the evaluation data
         function populateFormFields(data) {
             const ids = [
-                'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile',
-                'qualification', 'lastContract', 'englishGood', 'englishSatisf',
-                'englishPoor', 'Bmi', 'Europe', 'usa', 'medSea', 'farEast', 'pgGoa',
-                'crewExperienceYes', 'crewExperienceNo', 'newNationality',
-                'cargosHandled', 'automationExperience', 'ceInput1', 'ceInput2',
-                'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'sulzer', 'sulzer_rta',
-                'man_bw', 'pielstick', 'mak', 'yanmar', 'bw', 'deutz', 'daihatsu',
-                'caterpillar', 'other', 'pumps', 'gears', 'drinkingYes', 'drinkingNo',
-                'medicalYes', 'medicalNo', 'psInput1', 'psInput2', 'psInput3',
-                'psInput4', 'psInput5', 'psInput6', 'psInput7', 'psInput8',
-                'psInput9', 'psInput10', 'psInput11', 'psInput12', 'psInput13',
-                'umsVesselsYes', 'umsVesselsNo', 'bilgeSludgeYes', 'bilgeSludgeNo',
-                'pmsSoftwareYes', 'pmsSoftwareNo', 'reeferContainersYes',
-                'reeferContainersNo', 'extraordinaryCircumstancesYes',
-                'extraordinaryCircumstancesNo', 'congestedPassageYes',
-                'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes',
-                'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes',
-                'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes',
-                'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
-                'fuelChangeoverYes', 'fuelChangeoverNo', 'opeartionProceduresYes',
-                'operationProceduresNo', 'regulationsYes', 'regulationsNo',
-                'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
-                'intName', 'dateNow', 'signNow'
+            'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile', 'qualification', 
+                        'lastContract', 'englishGood', 'englishSatisf', 'englishPoor', 'vessel1', 
+                        'europe', 'usa', 'medSea', 'farEast', 'pgGoa', 'crewExperienceYes', 
+                        'crewExperienceNo', 'natioCrew', 'ceInput1', 'ceInput2', 'ceInput3', 
+                        'ceInput4', 'ceInput5', 'ceInput6', 'drinkingYes', 'drinkingNo', 
+                        'medicalYes', 'medicalNo', 'psInput1', 'psInput2', 'psInput3', 
+                        'psInput4', 'psInput5', 'psInput6', 'psInput7', 'psInput8', 
+                        'psInput9', 'psInput10', 'psInput11', 'psInput12', 'psInput13', 
+                        'umsVesselsYes', 'umsVesselsNo', 'bilgeSludgeYes', 'bilgeSludgeNo', 
+                        'pmsSoftwareYes', 'pmsSoftwareNo', 'reeferContainersYes', 
+                        'reeferContainersNo', 'extraordinaryCircumstancesYes', 
+                        'extraordinaryCircumstancesNo', 'congestedPassageYes', 
+                        'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes', 
+                        'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 
+                        'safetyISMYes', 'safetyISMNo', 'auditsYes', 'auditsNo', 
+                        'ecaSecaOperationYes', 'ecaSecaOperationNo', 'garbageManagementYes', 
+                        'garbageManagementNo', 'fuelChangeoverYes', 'fuelChangeoverNo', 
+                        'operationProceduresYes', 'operationProceduresNo', 'regulations1Yes', 
+                        'regulations1No', 'regulationsYes', 'regulationsNo', 
+                        'reasonForLeaving', 'intComments', 'accepted', 'rejected', 'grading', 
+                        'intNow', 'signature', 'dateNow','signNow'
             ];
         
             ids.forEach(id => {
