--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -286,33 +286,40 @@
   <div class="row ">
     <div class="col-md-6 ">
      <div class="row">
-        <div class="col ">
-            <div class="border border-black-1  ">
-              <div class="bg-light p-4 ">
+        <div class="col">
+            <div class="border border-black-1">
+              <div class="bg-light p-4">
                 <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
-                <div class="row row-cols-2 g-2 ">
+                <div class="row row-cols-2 g-2">
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="< 1000" id="ceInput1">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput1" value="< 1000">
+                    <label class="form-check-label" for="ceInput1">&lt; 1000</label>
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="1000 - 3000" id="ceInput2">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput2" value="1000 - 3000">
+                    <label class="form-check-label" for="ceInput2">1000 - 3000</label>
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="3000 - 6000" id="ceInput3">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput3" value="3000 - 6000">
+                    <label class="form-check-label" for="ceInput3">3000 - 6000</label>
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="6000 - 10000" id="ceInput4">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput4" value="6000 - 10000">
+                    <label class="form-check-label" for="ceInput4">6000 - 10000</label>
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="10000 - 15000" id="ceInput5">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput5" value="10000 - 15000">
+                    <label class="form-check-label" for="ceInput5">10000 - 15000</label>
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder=">15000" id="ceInput6">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput6" value=">15000">
+                    <label class="form-check-label" for="ceInput6">&gt;15000</label>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          
   </div>
     </div>
  
@@ -566,11 +573,11 @@
                         <div class="mb-2">
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningYes" value="yes">
+                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningYes1" value="yes">
                             <label class="form-check-label" for="csmPlanningYes">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo" value="no">
+                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo1" value="no">
                             <label class="form-check-label" for="csmPlanningNo">NO</label>
                         </div>
                     </div>
@@ -684,11 +691,11 @@
                         <div class="mb-2">
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes" value="yes">
+                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes1" value="yes">
                             <label class="form-check-label" for="regulationsYes">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo" value="no">
+                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo1" value="no">
                             <label class="form-check-label" for="regulationsNo">NO</label>
                         </div>
                     </div>
