--- a/views/public/html/Evaluation-OfficersDeckForm.html
+++ b/views/public/html/Evaluation-OfficersDeckForm.html
@@ -285,33 +285,40 @@
   <div class="row ">
     <div class="col-md-6 ">
      <div class="row">
-    <div class="col">
-      <div class="border border-black-1">
-        <div class="bg-light p-4 ">
-          <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
-          <div class="row row-cols-2 g-2 ">
-            <div class="col">
-              <input type="text" class="form-control" placeholder="< 1000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="1000 - 3000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="3000 - 6000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="6000 - 10000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="10000 - 15000">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder=">15000">
+        <div class="col">
+            <div class="border border-black-1">
+              <div class="bg-light p-4">
+                <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
+                <div class="row row-cols-2 g-2">
+                  <div class="col">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput1" value="< 1000">
+                    <label class="form-check-label" for="ceInput1">&lt; 1000</label>
+                  </div>
+                  <div class="col">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput2" value="1000 - 3000">
+                    <label class="form-check-label" for="ceInput2">1000 - 3000</label>
+                  </div>
+                  <div class="col">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput3" value="3000 - 6000">
+                    <label class="form-check-label" for="ceInput3">3000 - 6000</label>
+                  </div>
+                  <div class="col">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput4" value="6000 - 10000">
+                    <label class="form-check-label" for="ceInput4">6000 - 10000</label>
+                  </div>
+                  <div class="col">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput5" value="10000 - 15000">
+                    <label class="form-check-label" for="ceInput5">10000 - 15000</label>
+                  </div>
+                  <div class="col">
+                    <input type="radio" class="form-check-input" name="containerExperience" id="ceInput6" value=">15000">
+                    <label class="form-check-label" for="ceInput6">&gt;15000</label>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
+          
   </div>
     </div>
  
@@ -565,11 +572,11 @@ SIRE/CID experience
                         <div class="mb-2">
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningYes" value="yes">
+                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningYes1" value="yes">
                             <label class="form-check-label" for="csmPlanningYes">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo" value="no">
+                            <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo1" value="no">
                             <label class="form-check-label" for="csmPlanningNo">NO</label>
                         </div>
                     </div>
@@ -683,11 +690,11 @@ SIRE/CID experience
                         <div class="mb-2">
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes" value="yes">
+                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes1" value="yes">
                             <label class="form-check-label" for="regulationsYes">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo" value="no">
+                            <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo1" value="no">
                             <label class="form-check-label" for="regulationsNo">NO</label>
                         </div>
                     </div>
@@ -805,27 +812,8 @@ SIRE/CID experience
         // Function to populate form fields with values from the evaluation data
         function populateFormFields(data) {
             const ids = [
-            'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile', 'qualification', 
-                        'lastContract', 'englishGood', 'englishSatisf', 'englishPoor', 'vessel1', 
-                        'europe', 'usa', 'medSea', 'farEast', 'pgGoa', 'crewExperienceYes', 
-                        'crewExperienceNo', 'natioCrew', 'ceInput1', 'ceInput2', 'ceInput3', 
-                        'ceInput4', 'ceInput5', 'ceInput6', 'drinkingYes', 'drinkingNo', 
-                        'medicalYes', 'medicalNo', 'psInput1', 'psInput2', 'psInput3', 
-                        'psInput4', 'psInput5', 'psInput6', 'psInput7', 'psInput8', 
-                        'psInput9', 'psInput10', 'psInput11', 'psInput12', 'psInput13', 
-                        'umsVesselsYes', 'umsVesselsNo', 'bilgeSludgeYes', 'bilgeSludgeNo', 
-                        'pmsSoftwareYes', 'pmsSoftwareNo', 'reeferContainersYes', 
-                        'reeferContainersNo', 'extraordinaryCircumstancesYes', 
-                        'extraordinaryCircumstancesNo', 'congestedPassageYes', 
-                        'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes', 
-                        'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 
-                        'safetyISMYes', 'safetyISMNo', 'auditsYes', 'auditsNo', 
-                        'ecaSecaOperationYes', 'ecaSecaOperationNo', 'garbageManagementYes', 
-                        'garbageManagementNo', 'fuelChangeoverYes', 'fuelChangeoverNo', 
-                        'operationProceduresYes', 'operationProceduresNo', 'regulations1Yes', 
-                        'regulations1No', 'regulationsYes', 'regulationsNo', 
-                        'reasonForLeaving', 'intComments', 'accepted', 'rejected', 'grading', 
-                        'intNow', 'signature', 'dateNow','signNow'
+            'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile', 'qualification', 'lastContract', 'englishGood', 'englishSatisf', 'englishPoor', 'vessel1', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa', 'crewExperienceYes', 'crewExperienceNo', 'nationCrew', 'ceInput1', 'ceInput2', 'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'drinkingYes', 'drinkingNo', 'medicalYes', 'medicalNo', 'psInput1', 'psInput2', 'psInput3', 'psInput4', 'psInput5', 'psInput6', 'psInput7', 'psInput8', 'psInput9', 'psInput10', 'psInput11', 'psInput12', 'psInput13', 'umsVesselsYes', 'umsVesselsNo', 'bilgeSludgeYes', 'bilgeSludgeNo', 'pmsSoftwareYes', 'pmsSoftwareNo', 'reeferContainersYes', 'reeferContainersNo', 'extraordinaryCircumstancesYes', 'extraordinaryCircumstancesNo', 'congestedPassageYes', 'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes', 'csmPlanningNo', 'cmPlanningYes1', 'csmPlanningNo1', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes', 'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes', 'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo', 'fuelChangeoverYes', 'fuelChangeoverNo', 'operationProceduresYes', 'operationProceduresNo', 'regulationsYes', 'regulationsNo', 'regulationsYes1', 'regulationsNo1', 'reasonForLeaving', 'intComments', 'accepted', 'rejected', 'grading', 'intNow', 'signature', 'dateNow'
+
             ];
         
             ids.forEach(id => {
