--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -574,11 +574,11 @@
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningYes1" value="yes">
-                            <label class="form-check-label" for="csmPlanningYes">YES</label>
+                            <label class="form-check-label" for="csmPlanningYes1">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo1" value="no">
-                            <label class="form-check-label" for="csmPlanningNo">NO</label>
+                            <label class="form-check-label" for="csmPlanningNo1">NO</label>
                         </div>
                     </div>
                 </div>
@@ -680,11 +680,11 @@
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes" value="yes">
-                            <label class="form-check-label" for="regulations1Yes">YES</label>
+                            <label class="form-check-label" for="regulationsYes">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo" value="no">
-                            <label class="form-check-label" for="regulations1No">NO</label>
+                            <label class="form-check-label" for="regulationsNo">NO</label>
                         </div>
                     </div>
                      <label class="form-label">Tank cleaning/Hatch cleaning - Experience</label>
@@ -692,11 +692,11 @@
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes1" value="yes">
-                            <label class="form-check-label" for="regulationsYes">YES</label>
+                            <label class="form-check-label" for="regulationsYes1">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo1" value="no">
-                            <label class="form-check-label" for="regulationsNo">NO</label>
+                            <label class="form-check-label" for="regulationsNo1">NO</label>
                         </div>
                     </div>
 
@@ -889,9 +889,9 @@
                     const ids = [
                     'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile',
                 'qualification', 'lastContract', 'englishGood', 'englishSatisf',
-                'englishPoor', 'Bmi', 'Europe', 'usa', 'medSea', 'farEast', 'pgGoa',
-                'crewExperienceYes', 'crewExperienceNo', 'newNationality',
-                'cargosHandled', 'automationExperience', 'ceInput1', 'ceInput2',
+                'englishPoor', 'vessel1', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa',
+                'crewExperienceYes', 'crewExperienceNo', 'nationCrew',
+                'ceInput1', 'ceInput2',
                 'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'sulzer', 'sulzer_rta',
                 'man_bw', 'pielstick', 'mak', 'yanmar', 'bw', 'deutz', 'daihatsu',
                 'caterpillar', 'other', 'pumps', 'gears', 'drinkingYes', 'drinkingNo',
