--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -364,14 +364,14 @@
         Number of Contracts in Ranks
             </div>
             <div class="col border p-2">
-               <input class="form-control" id="psInput1">
+               <input class="form-control" type="text" id="psInput1">
             </div>
         </div>
         <div class="row ">
             <div class="col-5 border pt-3">
         Type or size of the vessels served    </div>
             <div class="col border p-2">
-               <input class="form-control" id="psInput2">
+               <input class="form-control" type="text" id="psInput2">
             </div>
         </div>
         <div class="row ">
@@ -379,7 +379,7 @@
         Last contract sign off date
             </div>
             <div class="col border p-2">
-               <input class="form-control" id="psInput3">
+               <input class="form-control" type="text" id="psInput3">
             </div>
         </div>
         <div class="row ">
@@ -387,7 +387,7 @@
         Type of main engine exp.
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput4">
+               <input class="form-control" type="text"  id="psInput4">
             </div>
         </div>
         <div class="row ">
@@ -395,7 +395,7 @@
         Type of AUX engine exp.
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput5">
+               <input class="form-control" type="text"  id="psInput5">
             </div>
         </div>
         <div class="row ">
@@ -403,7 +403,7 @@
         Cargo cranes/gear (marker) exp.
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput6">
+               <input class="form-control"  type="text" id="psInput6">
             </div>
         </div>
         <div class="row ">
@@ -411,7 +411,7 @@
         Type of Cargo carried
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput7">
+               <input class="form-control" type="text"  id="psInput7">
             </div>
         </div>
         <div class="row ">
@@ -419,7 +419,7 @@
         Type of Cargo pumps(tankers)
             </div>
             <div class="col border p-2">
-               <input class="form-control" id="psInput8">
+               <input class="form-control" type="text" id="psInput8">
             </div>
         </div>
         <div class="row ">
@@ -427,7 +427,7 @@
         Trading Area(limited/WW)
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput9">
+               <input class="form-control" type="text"  id="psInput9">
             </div>
         </div>
         <div class="row ">
@@ -435,7 +435,7 @@
         Mixed crew (nationalities) exp.
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput10">
+               <input class="form-control" type="text"  id="psInput10">
             </div>
         </div>
         <div class="row ">
@@ -443,7 +443,7 @@
         ECDIS experience in previous 12 months
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput11">
+               <input class="form-control" type="text"  id="psInput11">
             </div>
         </div>
         <div class="row ">
@@ -451,7 +451,7 @@
         PSC experience
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput12">
+               <input class="form-control" type="text"  id="psInput12">
             </div>
         </div>
         <div class="row ">
@@ -459,7 +459,7 @@
         SIRE/CID experience
             </div>
             <div class="col border p-2">
-               <input class="form-control"  id="psInput13">
+               <input class="form-control" type="text"  id="psInput13">
             </div>
         </div>
           </div>
@@ -892,9 +892,7 @@
                 'englishPoor', 'vessel1', 'europe', 'usa', 'medSea', 'farEast', 'pgGoa',
                 'crewExperienceYes', 'crewExperienceNo', 'nationCrew',
                 'ceInput1', 'ceInput2',
-                'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'sulzer', 'sulzer_rta',
-                'man_bw', 'pielstick', 'mak', 'yanmar', 'bw', 'deutz', 'daihatsu',
-                'caterpillar', 'other', 'pumps', 'gears', 'drinkingYes', 'drinkingNo',
+                'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'drinkingYes', 'drinkingNo',
                 'medicalYes', 'medicalNo', 'psInput1', 'psInput2', 'psInput3',
                 'psInput4', 'psInput5', 'psInput6', 'psInput7', 'psInput8',
                 'psInput9', 'psInput10', 'psInput11', 'psInput12', 'psInput13',
@@ -903,13 +901,13 @@
                 'reeferContainersNo', 'extraordinaryCircumstancesYes',
                 'extraordinaryCircumstancesNo', 'congestedPassageYes',
                 'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes',
-                'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes',
+                'csmPlanningNo','csmPlanningYes1','csmPlanningNo1', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes',
                 'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes',
                 'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo',
                 'fuelChangeoverYes', 'fuelChangeoverNo', 'opeartionProceduresYes',
-                'operationProceduresNo', 'regulationsYes', 'regulationsNo',
-                'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading',
-                'intName', 'dateNow', 'signNow'
+                'operationProceduresNo', 'regulationsYes', 'regulationsNo','regulationsYes1','regulationsNo1',
+                'reasonForLeaving', 'intComments', 'accepted', 'rejected', 'grading',
+                'intName', 'dateNow', 'signature'
                     ];
 
                     const evalObject = {};
