--- a/views/public/html/Evaluation-OfficersDeckForm.html
+++ b/views/public/html/Evaluation-OfficersDeckForm.html
@@ -573,11 +573,11 @@
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningYes1" value="yes">
-                            <label class="form-check-label" for="csmPlanningYes">YES</label>
+                            <label class="form-check-label" for="csmPlanningYes1">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="csmPlanning" id="csmPlanningNo1" value="no">
-                            <label class="form-check-label" for="csmPlanningNo">NO</label>
+                            <label class="form-check-label" for="csmPlanningNo1">NO</label>
                         </div>
                     </div>
                 </div>
@@ -691,11 +691,11 @@
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsYes1" value="yes">
-                            <label class="form-check-label" for="regulationsYes">YES</label>
+                            <label class="form-check-label" for="regulationsYes1">YES</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" name="regulations" id="regulationsNo1" value="no">
-                            <label class="form-check-label" for="regulationsNo">NO</label>
+                            <label class="form-check-label" for="regulationsNo1">NO</label>
                         </div>
                     </div>
 
