--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -699,6 +699,18 @@
                               </div>
                           </div>
                       </div>
+
+                      <div class="col-md-4">
+                        <div class="mb-3 row">
+                            <label for="user_group" class="col-md-4 col-form-label">Nationality:</label>
+                            <div class="col-md-8">
+                                <select id="user_nationality" class="form-select" required>
+                                    <option value="" disabled selected>-- Select Nationality --</option>
+                                    
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                       
                       <div class="col-md-4">
                           <div class="mb-3 row">
